--- a/Moleculas quirales config aleatoria periodico mas vecinos.ipynb
+++ b/Moleculas quirales config aleatoria periodico mas vecinos.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -549,23 +549,23 @@
        " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
        " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
        " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
-       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\""
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"L\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "idx = 65\n",
-    "chirality[idx], positions[idx] = change_molecule(chirality[idx], positions[idx], centers[idx])\n",
+    "change_idx = 65\n",
+    "chirality[idx], positions[idx] = change_molecule(chirality[change_idx], positions[change_idx], centers[change_idx])\n",
     "reshape(chirality, (side, side))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -586,43 +586,36 @@
        " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "energy_mat = Vector{Int64}(side*side)\n",
+    "energy_mat2 = Vector{Int64}(side*side)\n",
     "for idx in 1:(side*side)\n",
     "    #idx = jj*side + ii + 1\n",
     "    neighbor_pos = Vector(neigh_number + 1)\n",
     "    for (ii, molecules) in enumerate([idx, neighbors[idx]...])\n",
     "        neighbor_pos[ii] = positions[molecules]\n",
     "    end\n",
-    "    energy_mat[idx] = potential_energy(neighbor_pos)\n",
+    "    energy_mat2[change_idx] = potential_energy(neighbor_pos)\n",
     "end \n",
     "reshape(energy_mat, (side, side))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Method definition metropolis_step(Float64) in module Main at In[31]:2 overwritten at In[52]:2.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "metropolis_step (generic function with 1 method)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,6 +637,26 @@
     "        end\n",
     "    end\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metropolis_step(Float64(energy_mat2[change_idx] - energy_mat[change_idx]))"
    ]
   },
   {
