--- a/Moleculas quirales config aleatoria periodico mas vecinos.ipynb
+++ b/Moleculas quirales config aleatoria periodico mas vecinos.ipynb
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -650,13 +650,13 @@
        "false"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metropolis_step(Float64(energy_mat2[change_idx] - energy_mat[change_idx]))"
+    "metropolis_step((energy_mat2[change_idx] - energy_mat[change_idx])/temperature)"
    ]
   },
   {
