--- a/Moleculas quirales config aleatoria periodico mas vecinos.ipynb
+++ b/Moleculas quirales config aleatoria periodico mas vecinos.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -549,23 +549,23 @@
        " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
        " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
        " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
-       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"L\""
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\""
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "change_idx = 65\n",
-    "chirality[idx], positions[idx] = change_molecule(chirality[change_idx], positions[change_idx], centers[change_idx])\n",
+    "chirality[change_idx], positions[change_idx] = change_molecule(chirality[change_idx], positions[change_idx], centers[change_idx])\n",
     "reshape(chirality, (side, side))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,9 +599,9 @@
     "    for (ii, molecules) in enumerate([idx, neighbors[idx]...])\n",
     "        neighbor_pos[ii] = positions[molecules]\n",
     "    end\n",
-    "    energy_mat2[change_idx] = potential_energy(neighbor_pos)\n",
+    "    energy_mat2[idx] = potential_energy(neighbor_pos)\n",
     "end \n",
-    "reshape(energy_mat, (side, side))"
+    "reshape(energy_mat2, (side, side))"
    ]
   },
   {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -650,13 +650,108 @@
        "false"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "metropolis_step((energy_mat2[change_idx] - energy_mat[change_idx])/temperature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12×12 Array{Any,2}:\n",
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"\n",
+       " \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"L\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\"  \"D\""
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "change_idx = 65\n",
+    "chirality[change_idx], positions[change_idx] = change_molecule(chirality[change_idx], positions[change_idx], centers[change_idx])\n",
+    "reshape(chirality, (side, side))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12×12 Array{Int64,2}:\n",
+       " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19\n",
+       " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19\n",
+       " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19\n",
+       " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19\n",
+       " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19\n",
+       " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19\n",
+       " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19\n",
+       " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19\n",
+       " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19\n",
+       " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19\n",
+       " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19\n",
+       " -19  -20  -20  -20  -20  -19  -19  -20  -20  -20  -20  -19"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "energy_mat3 = Vector{Int64}(side*side)\n",
+    "for idx in 1:(side*side)\n",
+    "    #idx = jj*side + ii + 1\n",
+    "    neighbor_pos = Vector(neigh_number + 1)\n",
+    "    for (ii, molecules) in enumerate([idx, neighbors[idx]...])\n",
+    "        neighbor_pos[ii] = positions[molecules]\n",
+    "    end\n",
+    "    energy_mat3[idx] = potential_energy(neighbor_pos)\n",
+    "end \n",
+    "reshape(energy_mat3, (side, side))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metropolis_step((energy_mat3[change_idx] - energy_mat2[change_idx])/temperature)"
    ]
   },
   {
