--- a/Distancias.ipynb
+++ b/Distancias.ipynb
@@ -80,247 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Numerically</th>\n",
-       "      <th>Symbolic</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.41421356237310</td>\n",
-       "      <td>sqrt(2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.00498756211209</td>\n",
-       "      <td>sqrt((l1 - 1)**2 + 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.14127122105133</td>\n",
-       "      <td>sqrt((l2 - 1)**2 + 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.559016994374947</td>\n",
-       "      <td>sqrt((l1 - 1)**2 + (l2 - 1)**2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.00000000000000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.100000000000000</td>\n",
-       "      <td>sqrt((l1 - 1)**2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1.09658560997307</td>\n",
-       "      <td>sqrt(l2**2 + 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.460977222864644</td>\n",
-       "      <td>sqrt(l2**2 + (l1 - 1)**2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1.41421356237310</td>\n",
-       "      <td>sqrt(2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1.00498756211209</td>\n",
-       "      <td>sqrt((l1 - 1)**2 + 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1.76139149538085</td>\n",
-       "      <td>sqrt((l2 + 1)**2 + 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1.45344418537486</td>\n",
-       "      <td>sqrt((l1 - 1)**2 + (l2 + 1)**2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1.00000000000000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1.34536240470737</td>\n",
-       "      <td>sqrt(l1**2 + 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>0.550000000000000</td>\n",
-       "      <td>sqrt((l2 - 1)**2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>1.05475115548645</td>\n",
-       "      <td>sqrt(l1**2 + (l2 - 1)**2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>1.00000000000000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1.34536240470737</td>\n",
-       "      <td>sqrt(l1**2 + 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1.45000000000000</td>\n",
-       "      <td>sqrt((l2 + 1)**2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1.70660481658760</td>\n",
-       "      <td>sqrt(l1**2 + (l2 + 1)**2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>1.41421356237310</td>\n",
-       "      <td>sqrt(2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2.14709105535839</td>\n",
-       "      <td>sqrt((l1 + 1)**2 + 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>1.14127122105133</td>\n",
-       "      <td>sqrt((l2 - 1)**2 + 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>1.97800404448525</td>\n",
-       "      <td>sqrt((l1 + 1)**2 + (l2 - 1)**2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>1.00000000000000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>1.90000000000000</td>\n",
-       "      <td>sqrt((l1 + 1)**2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>1.09658560997307</td>\n",
-       "      <td>sqrt(l2**2 + 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>1.95256241897666</td>\n",
-       "      <td>sqrt(l2**2 + (l1 + 1)**2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>1.41421356237310</td>\n",
-       "      <td>sqrt(2)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>2.14709105535839</td>\n",
-       "      <td>sqrt((l1 + 1)**2 + 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>1.76139149538085</td>\n",
-       "      <td>sqrt((l2 + 1)**2 + 1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>2.39008368054342</td>\n",
-       "      <td>sqrt((l1 + 1)**2 + (l2 + 1)**2)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Numerically                         Symbolic\n",
-       "0    1.41421356237310                          sqrt(2)\n",
-       "1    1.00498756211209            sqrt((l1 - 1)**2 + 1)\n",
-       "2    1.14127122105133            sqrt((l2 - 1)**2 + 1)\n",
-       "3   0.559016994374947  sqrt((l1 - 1)**2 + (l2 - 1)**2)\n",
-       "4    1.00000000000000                                1\n",
-       "5   0.100000000000000                sqrt((l1 - 1)**2)\n",
-       "6    1.09658560997307                  sqrt(l2**2 + 1)\n",
-       "7   0.460977222864644        sqrt(l2**2 + (l1 - 1)**2)\n",
-       "8    1.41421356237310                          sqrt(2)\n",
-       "9    1.00498756211209            sqrt((l1 - 1)**2 + 1)\n",
-       "10   1.76139149538085            sqrt((l2 + 1)**2 + 1)\n",
-       "11   1.45344418537486  sqrt((l1 - 1)**2 + (l2 + 1)**2)\n",
-       "12   1.00000000000000                                1\n",
-       "13   1.34536240470737                  sqrt(l1**2 + 1)\n",
-       "14  0.550000000000000                sqrt((l2 - 1)**2)\n",
-       "15   1.05475115548645        sqrt(l1**2 + (l2 - 1)**2)\n",
-       "16   1.00000000000000                                1\n",
-       "17   1.34536240470737                  sqrt(l1**2 + 1)\n",
-       "18   1.45000000000000                sqrt((l2 + 1)**2)\n",
-       "19   1.70660481658760        sqrt(l1**2 + (l2 + 1)**2)\n",
-       "20   1.41421356237310                          sqrt(2)\n",
-       "21   2.14709105535839            sqrt((l1 + 1)**2 + 1)\n",
-       "22   1.14127122105133            sqrt((l2 - 1)**2 + 1)\n",
-       "23   1.97800404448525  sqrt((l1 + 1)**2 + (l2 - 1)**2)\n",
-       "24   1.00000000000000                                1\n",
-       "25   1.90000000000000                sqrt((l1 + 1)**2)\n",
-       "26   1.09658560997307                  sqrt(l2**2 + 1)\n",
-       "27   1.95256241897666        sqrt(l2**2 + (l1 + 1)**2)\n",
-       "28   1.41421356237310                          sqrt(2)\n",
-       "29   2.14709105535839            sqrt((l1 + 1)**2 + 1)\n",
-       "30   1.76139149538085            sqrt((l2 + 1)**2 + 1)\n",
-       "31   2.39008368054342  sqrt((l1 + 1)**2 + (l2 + 1)**2)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df"
+    "#print(df.to_latex())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -759,6 +528,292 @@
    "source": [
     "for ii in range(len(norms)):\n",
     "    display([ii + 1, norms[ii], num_norms[ii]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 6\\right ], \\quad \\sqrt{2}, \\quad 0.1\\right ]$$"
+      ],
+      "text/plain": [
+       "[[6], √2, 0.1]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 8\\right ], \\quad \\sqrt{\\left(l_{1} - 1\\right)^{2} + 1}, \\quad 0.460977222864644\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡        _______________                   ⎤\n",
+       "⎢       ╱         2                        ⎥\n",
+       "⎣[8], ╲╱  (l₁ - 1)  + 1 , 0.460977222864644⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 15\\right ], \\quad \\sqrt{\\left(l_{2} - 1\\right)^{2} + 1}, \\quad 0.55\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡         _______________      ⎤\n",
+       "⎢        ╱         2           ⎥\n",
+       "⎣[15], ╲╱  (l₂ - 1)  + 1 , 0.55⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 4\\right ], \\quad \\sqrt{\\left(l_{1} - 1\\right)^{2} + \\left(l_{2} - 1\\right)^{2}}, \\quad 0.559016994374947\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡        _______________________                   ⎤\n",
+       "⎢       ╱         2           2                    ⎥\n",
+       "⎣[4], ╲╱  (l₁ - 1)  + (l₂ - 1)  , 0.559016994374947⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 5, \\quad 13, \\quad 17, \\quad 25\\right ], \\quad 1, \\quad 1.0\\right ]$$"
+      ],
+      "text/plain": [
+       "[[5, 13, 17, 25], 1, 1.0]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 2, \\quad 10\\right ], \\quad \\sqrt{\\left(l_{1} - 1\\right)^{2}}, \\quad 1.00498756211209\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡            ___________                  ⎤\n",
+       "⎢           ╱         2                   ⎥\n",
+       "⎣[2, 10], ╲╱  (l₁ - 1)  , 1.00498756211209⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 16\\right ], \\quad \\sqrt{l_{2}^{2} + 1}, \\quad 1.05475115548645\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡         _________                  ⎤\n",
+       "⎢        ╱   2                       ⎥\n",
+       "⎣[16], ╲╱  l₂  + 1 , 1.05475115548645⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 7, \\quad 27\\right ], \\quad \\sqrt{l_{2}^{2} + \\left(l_{1} - 1\\right)^{2}}, \\quad 1.09658560997307\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡            _________________                  ⎤\n",
+       "⎢           ╱   2           2                   ⎥\n",
+       "⎣[7, 27], ╲╱  l₂  + (l₁ - 1)  , 1.09658560997307⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 3, \\quad 23\\right ], \\quad \\sqrt{2}, \\quad 1.14127122105133\\right ]$$"
+      ],
+      "text/plain": [
+       "[[3, 23], √2, 1.14127122105133]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 14, \\quad 18\\right ], \\quad \\sqrt{\\left(l_{1} - 1\\right)^{2} + 1}, \\quad 1.34536240470737\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡             _______________                  ⎤\n",
+       "⎢            ╱         2                       ⎥\n",
+       "⎣[14, 18], ╲╱  (l₁ - 1)  + 1 , 1.34536240470737⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 1, \\quad 9, \\quad 21, \\quad 29\\right ], \\quad \\sqrt{\\left(l_{2} + 1\\right)^{2} + 1}, \\quad 1.4142135623731\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡                   _______________                 ⎤\n",
+       "⎢                  ╱         2                      ⎥\n",
+       "⎣[1, 9, 21, 29], ╲╱  (l₂ + 1)  + 1 , 1.4142135623731⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 19\\right ], \\quad \\sqrt{\\left(l_{1} - 1\\right)^{2} + \\left(l_{2} + 1\\right)^{2}}, \\quad 1.45\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡         _______________________      ⎤\n",
+       "⎢        ╱         2           2       ⎥\n",
+       "⎣[19], ╲╱  (l₁ - 1)  + (l₂ + 1)  , 1.45⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 12\\right ], \\quad 1, \\quad 1.45344418537486\\right ]$$"
+      ],
+      "text/plain": [
+       "[[12], 1, 1.45344418537486]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 20\\right ], \\quad \\sqrt{l_{1}^{2} + 1}, \\quad 1.7066048165876\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡         _________                 ⎤\n",
+       "⎢        ╱   2                      ⎥\n",
+       "⎣[20], ╲╱  l₁  + 1 , 1.7066048165876⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 11, \\quad 31\\right ], \\quad \\sqrt{\\left(l_{2} - 1\\right)^{2}}, \\quad 1.76139149538085\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡             ___________                  ⎤\n",
+       "⎢            ╱         2                   ⎥\n",
+       "⎣[11, 31], ╲╱  (l₂ - 1)  , 1.76139149538085⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 26\\right ], \\quad \\sqrt{l_{1}^{2} + \\left(l_{2} - 1\\right)^{2}}, \\quad 1.9\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡         _________________     ⎤\n",
+       "⎢        ╱   2           2      ⎥\n",
+       "⎣[26], ╲╱  l₁  + (l₂ - 1)  , 1.9⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 28\\right ], \\quad 1, \\quad 1.95256241897666\\right ]$$"
+      ],
+      "text/plain": [
+       "[[28], 1, 1.95256241897666]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 24\\right ], \\quad \\sqrt{l_{1}^{2} + 1}, \\quad 1.97800404448525\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡         _________                  ⎤\n",
+       "⎢        ╱   2                       ⎥\n",
+       "⎣[24], ╲╱  l₁  + 1 , 1.97800404448525⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 22, \\quad 30\\right ], \\quad \\sqrt{\\left(l_{2} + 1\\right)^{2}}, \\quad 2.14709105535839\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡             ___________                  ⎤\n",
+       "⎢            ╱         2                   ⎥\n",
+       "⎣[22, 30], ╲╱  (l₂ + 1)  , 2.14709105535839⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$$\\left [ \\left [ 32\\right ], \\quad \\sqrt{l_{1}^{2} + \\left(l_{2} + 1\\right)^{2}}, \\quad 2.39008368054342\\right ]$$"
+      ],
+      "text/plain": [
+       "⎡         _________________                  ⎤\n",
+       "⎢        ╱   2           2                   ⎥\n",
+       "⎣[32], ╲╱  l₁  + (l₂ + 1)  , 2.39008368054342⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sorted_num_norms = sorted(list(set(num_norms)))\n",
+    "for jj, sorted_norm in enumerate(sorted_num_norms):\n",
+    "    indexes = []\n",
+    "    for ii in range(len(norms)):\n",
+    "        if num_norms[ii] == sorted_norm:\n",
+    "            indexes.append(ii + 1)\n",
+    "    display([indexes, norms[jj], sorted_norm])"
    ]
   },
   {
